update iterary and delete it

--- a/project2_1/config/locales/en.yml
+++ b/project2_1/config/locales/en.yml
@@ -38,6 +38,7 @@ en:
         name: "Tour Name"
         user: "Creator"
         id: "Tour ID"
+        location: "Itinerary"
       review:
         user: "Wrote by"
         tour: "Tour Name"
